# DylibSurfer

./: .gitignore  Cargo.toml  README.md  README.zh_CN.md  get_content.py
dylibsurfer-bindgen/: Cargo.toml
dylibsurfer-bindgen/config/: default.yaml
dylibsurfer-bindgen/src/: lib.rs
dylibsurfer-bindgen/src/generators/: ffi.rs  mod.rs  safe_wrapper.rs  types.rs
dylibsurfer-bindgen/src/generators/templates/: ffi.hbs  function.rs  mod.rs  structure.rs
dylibsurfer-bindgen/src/mapping/: config.rs  engine.rs  mod.rs
dylibsurfer-harness/: Cargo.toml
dylibsurfer-harness/examples/: config.yaml  input_conversion_example.rs
dylibsurfer-harness/src/: error.rs  lib.rs
dylibsurfer-harness/src/analyzer/: graph.rs  mod.rs  security.rs  selection.rs  testability.rs  visualization.rs
dylibsurfer-harness/src/analyzer/examples/: analyze_library.rs
dylibsurfer-harness/src/config/: mod.rs  types.rs
dylibsurfer-harness/src/generator/: context.rs  mod.rs
dylibsurfer-harness/src/input_conversion/: Input_conversion_system.md  byte_parser.rs  integration.rs  mod.rs  resource_manager.rs  state_tracker.rs  type_extractor.rs
dylibsurfer-harness/src/template/: engine.rs  formatter.rs  mod.rs
dylibsurfer-harness/src/utils/: fs.rs  mod.rs
dylibsurfer-harness/tests/: harness_generation_test.rs  input_conversion_test.rs
dylibsurfer-harness/tests/testdata/: png.ll
dylibsurfer-ir/: .gitignore  Cargo.toml  output.json
dylibsurfer-ir/src/: lib.rs  type_resolver.rs
dylibsurfer-ir/testdata/: libpng.ll
dylibsurfer-ir/tests/: libpng_test.rs
(+4 files in other folders)
