[package]
name = "dylibsurfer-ir"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.2.0", features = ["llvm14-0", "target-x86"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dashmap = "6.1.0"
parking_lot = "0.12"
thread_local = "1.1"
